--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -12,6 +12,8 @@ html {
     scroll-behavior: smooth;
     max-width: 100%;
     overflow-x: hidden;
+
+    font-size: clamp(14px, 1.1vw, 18px);
 }
 
 body {
